--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -2,7 +2,7 @@
 
 /* Default background color */
 body {
-    background-color: #f0f0f0;
+    background-color: #e0e0ff;
 }
 
 /* Styling the year links */
