--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -31,6 +31,6 @@ body {
 #year-info {
     margin-top: 20px;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: #0e0eff;
     border: 1px solid #ddd;
 }
