--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -28,9 +28,9 @@ ul li {
 .year-links {
     display: flex;
     flex-wrap: wrap; /* Allow the items to wrap to the next line */
-    gap: 10px; /* Space between items */
-    justify-content: center; /* Center the links */
-    padding: 20px;
+    gap: 5px; /* Space between items */
+    justify-content: left; /* move left the links */
+    padding: 10px;
 }
 
 /* Styling each year link */
