--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -53,3 +53,11 @@ ul li {
     background-color: #e0e0ff;
     border: 1px solid #ddd;
 }
+
+graphs-main {
+    display: flex;
+    flex-wrap: wrap; /* Allow the items to wrap to the next line */
+    gap: 5px; /* Space between items */
+    justify-content: left; /* move left the links */
+    padding: 10px;
+}
