--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -3,6 +3,9 @@
 /* Default background color */
 body {
     background-color: #e0e0ff;
+	display: flex;
+    		justify-content: center; /* Center the content horizontally */
+    		align-items: center;     /* Center the content vertically */
 }
 
 /* styling the header */
@@ -11,6 +14,13 @@ header {
 }
 h1, h4 {
     margin-bottom: 20px;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;             /* Full width */
 }
 
 ul {
@@ -55,10 +65,9 @@ ul li {
 }
 
 #rainfall-graphs {
-    #rainfall-graphs {
     display: flex;
     flex-direction: column;  /* Stack items vertically */
     align-items: center;     /* Center all items horizontally */
-    gap: 10px;               /* Add space between text and images */
-    padding: 10px;
+    gap: 5px;               /* Add space between text and images */
+    padding: 15px;
 }
