--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -65,11 +65,11 @@ ul li {
 }
 
 #rainfall-graphs p {
-    margin-bottom: 10px;  /* Space below each text element */
+    margin-bottom: 20px;  /* Space below each text element */
 }
 
 #rainfall-graphs img {
-    margin-bottom: 25px;     /* Space above each image */
+    margin-bottom: 35px;     /* Space below each image */
 }
 
 
