--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -68,6 +68,8 @@ ul li {
 #rainfall-graphs img {
     margin-bottom: 35px;     /* Space below each image */
     margin-top: 10px;	     /* space above each image */
+    max-width: 100%;        /* Ensure the image doesn't exceed the width of the container */
+    height: auto;           /* Maintain aspect ratio */
 }
 
 
