--- a/myworks/stylesnew.css
+++ b/myworks/stylesnew.css
@@ -47,13 +47,13 @@ ul li {
 
 /* Styling the container for year information */
 #year-info {
-    margin-top: 20px;
-    padding: 20px;
+    margin-top: 0px;
+    padding: 0px;
     background-color: #e0e0ff;
-    border: 1px solid #ddd;
-    max-width: 900px;
+    /*border: 1px solid #ddd; */
+    /*max-width: 900px; */
     margin: 0 auto;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
 }
 
 /* Center the content inside #year-info */
