--- a/myworks/styles.css
+++ b/myworks/styles.css
@@ -49,8 +49,8 @@ ul li {
     color: #0056b3;
 }
 
-/* Styling the container for instruction information */
-#instruction {
+/* Styling the container for year-info information */
+#year-info {
     margin-top: 20px;
     padding: 20px;
     background-color: #e0e0ff;
