--- a/myworks/stylesnew.css
+++ b/myworks/stylesnew.css
@@ -47,11 +47,11 @@ ul li {
 
 /* Styling the container for year information */
 #year-info {
-    margin-top: 0px;
-    padding: 0px;
+    margin-top: 20px;
+    padding: 20px;
     background-color: #e0e0ff;
     /*border: 1px solid #ddd; */
-    /*max-width: 900px; */
+    max-width: 900px; 
     margin: 0 auto;
     /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
 }
@@ -63,11 +63,10 @@ ul li {
 
 /* Style for images */
 #rainfall-graphs img {
-    display: flex;
-    margin: 0 auto;
+    display: block;
+    margin: 20px  auto;
     max-width: 100%; /* Optional: limit image size */
     height: auto;
-    align-items: center;     /* Center all items horizontally */
 }
 
 /* Styling the months and previous years section */
