--- a/myworks/stylesnew.css
+++ b/myworks/stylesnew.css
@@ -51,7 +51,7 @@ ul li {
     padding: 20px;
     background-color: #e0e0ff;
     /*border: 1px solid #ddd; */
-    max-width: 900px; 
+    /*max-width: 900px; */ 
     margin: 0 auto;
     /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
 }
